==> chauphuocvu/LCD-water-control-V1-14_11_2018/STM32F4xx_LCD/Project/FreeRTOS/http_client_server_socket/src/stm32f4xx_uartstdio.c <==
#include "stm32f4xx_uartstdio.h"
#include "stm32f4xx_usart.h"
#include "stm32f4xx_gpio.h"
#include "stm32f4xx_rcc.h"

unsigned char
UARTgetc(void)
{
    //
    // Block until a character is received by the UART then return it to
    // the caller.
    //
		while(USART_GetFlagStatus(g_ulBase, USART_FLAG_RXNE) == RESET);
    return(USART_ReceiveData(g_ulBase));
}

unsigned int
UARTgets(char *pcBuf, unsigned long ulLen)
{
    unsigned long ulCount = 0;
    char cChar;
    static char bLastWasCR = 0;
    //
    // Adjust the length back by 1 to leave space for the trailing
    // null terminator.
    //
    ulLen--;

    //
    // Process characters until a newline is received.
    //
    while(1)
    {
        //
        // Read the next character from the console.
        //
				while(USART_GetFlagStatus(g_ulBase, USART_FLAG_RXNE) == RESET);
        cChar = USART_ReceiveData(g_ulBase);

        //
        // See if the backspace key was pressed.
        //
        if(cChar == '\b')
        {
            //
            // If there are any characters already in the buffer, then delete
            // the last.
            //
            if(ulCount)
            {
                //
                // Rub out the previous character.
                //
                UARTwrite("\b \b", 3);

                //
                // Decrement the number of characters in the buffer.
                //
                ulCount--;
            }

            //
            // Skip ahead to read the next character.
            //
            continue;
        }

        //
        // If this character is LF and last was CR, then just gobble up the
        // character because the EOL processing was taken care of with the CR.
        //
        if((cChar == '\n') && bLastWasCR)
        {
            bLastWasCR = 0;
            continue;
        }

        //
        // See if a newline or escape character was received.
        //
        if((cChar == '\r') || (cChar == '\n') || (cChar == 0x1b))
        {
            //
            // If the character is a CR, then it may be followed by a LF which
            // should be paired with the CR.  So remember that a CR was
            // received.
            //
            if(cChar == '\r')
            {
                bLastWasCR = 1;
            }

            //
            // Stop processing the input and end the line.
            //
            break;
        }

        //
        // Process the received character as long as we are not at the end of
        // the buffer.  If the end of the buffer has been reached then all
        // additional characters are ignored until a newline is received.
        //
        if(ulCount < ulLen)
        {
            //
            // Store the character in the caller supplied buffer.
            //
            pcBuf[ulCount] = cChar;

            //
            // Increment the count of characters received.
            //
            ulCount++;

            //
            // Reflect the character back to the user.
            //
// 						while(USART_GetFlagStatus(g_ulBase, USART_FLAG_TXE) == RESET);
//             USART_SendData(g_ulBase, cChar);
						if(ulCount == ulLen)
							break;
        }
    }

    //
    // Add a null termination to the string.
    //
		if(bLastWasCR)
			pcBuf[ulCount] = '\n';
		else
			pcBuf[ulCount] = 0;

    //
    // Send a CRLF pair to the terminal to end the line.
    //
    //UARTwrite("\r\n", 2);

    //
    // Return the count of chars in the buffer, not counting the trailing 0.
    //
    return(ulCount);
}

int
UARTwrite(const char *pcBuf, unsigned long ulLen)
{
	unsigned int uIdx;
	for(uIdx = 0; uIdx < ulLen; uIdx++)
  {
		if(*pcBuf == '\n')
			USART_SendData(g_ulBase,'\n');
		else
			USART_SendData(g_ulBase,*(pcBuf++));
		while(USART_GetFlagStatus(g_ulBase, USART_FLAG_TXE) == RESET);
	}
	return(uIdx);
}
