==> IncidentTechnologies/OphoEmbed/Drivers/TM4C/uartstdio.c <==
#include <stdint.h>
#include <stdbool.h>
#include <stdarg.h>
#include "inc/hw_ints.h"
#include "inc/hw_memmap.h"
#include "inc/hw_types.h"
#include "inc/hw_uart.h"
#include "driverlib/debug.h"
#include "driverlib/interrupt.h"
#include "driverlib/rom.h"
#include "driverlib/rom_map.h"
#include "driverlib/sysctl.h"
#include "driverlib/uart.h"
#include "uartstdio.h"

uint32_t  UARTwrite(const int8_t *pcBuf, uint32_t  ulLen) {
    uint32_t  uIdx;

    // Check for valid UART base address, and valid arguments.
    ASSERT(g_ulBase != 0);
    ASSERT(pcBuf != 0);

    for(uIdx = 0; uIdx < ulLen; uIdx++) {
        /*if(pcBuf[uIdx] == '\n')
            UARTCharPut(g_ulBase, '\r');*/

        // Send the character to the UART output.
        MAP_UARTCharPut(g_ulBase, pcBuf[uIdx]);
    }

    // Return the number of characters written.
    return(uIdx);
}

uint32_t  UARTgets(int8_t *pcBuf, uint32_t  ulLen) {
    uint32_t  ulCount = 0;
    int8_t cChar;
    static int8_t bLastWasCR = 0;

    // Check the arguments.
    ASSERT(pcBuf != 0);
    ASSERT(ulLen != 0);
    ASSERT(g_ulBase != 0);

    // Adjust the length back by 1 to leave space for the trailing null terminator.
    ulLen--;

    // Process characters until a newline is received.
    while(1) {
        // Read the next character from the console.
        cChar = UARTCharGet(g_ulBase);

        // See if the backspace key was pressed.
        if(cChar == '\b') {
            // If there are any characters already in the buffer, then delete the last.
            if(ulCount) {
                // Rub out the previous character.
                UARTwrite("\b \b", 3);

                // Decrement the number of characters in the buffer.
                ulCount--;
            }

            // Skip ahead to read the next character.
            continue;
        }

        // If this character is LF and last was CR, then just gobble up the
        // character because the EOL processing was taken care of with the CR.
        if((cChar == '\n') && bLastWasCR) {
            bLastWasCR = 0;
            continue;
        }

        // See if a newline or escape character was received.
        if((cChar == '\r') || (cChar == '\n') || (cChar == 0x1b)) {
            // If the character is a CR, then it may be followed by a LF which
            // should be paired with the CR.  So remember that a CR was
            // received.
            if(cChar == '\r')
                bLastWasCR = 1;

            // Stop processing the input and end the line.
            break;
        }

        // Process the received character as long as we are not at the end of
        // the buffer.  If the end of the buffer has been reached then all
        // additional characters are ignored until a newline is received.
        if(ulCount < ulLen) {
            // Store the character in the caller supplied buffer.
            pcBuf[ulCount] = cChar;

            // Increment the count of characters received.
            ulCount++;

            // Reflect the character back to the user.
            MAP_UARTCharPut(g_ulBase, cChar);
        }
    }

    // Add a null termination to the string.
    pcBuf[ulCount] = 0;

    // Send a CRLF pair to the terminal to end the line.
    UARTwrite("\r\n", 2);

    // Return the count of chars in the buffer, not counting the trailing 0.
    return(ulCount);
}

uint8_t UARTgetc(void) {
    // Block until a character is received by the UART then return it to the caller.
    return(UARTCharGet(g_ulBase));
}
